infra/terraform/templates/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${backstage__backend__deployment__name}
  namespace: ${backstage__namespace__name}
  labels:
%{ for key, value in backstage__backend__labels ~}
    ${key}: ${value}
%{ endfor ~}
spec:
  replicas: 3
  selector:
    matchLabels:
%{ for key, value in backstage__backend__labels ~}
      ${key}: ${value}
%{ endfor ~}
  template:
    metadata:
      labels:
%{ for key, value in backstage__backend__labels ~}
        ${key}: ${value}
%{ endfor ~}
    spec:
      serviceAccountName: ${backstage__service_account__name}
      imagePullSecrets:
        - name: docker
      containers:
        - name: ${backstage__backend__container__name}
          image: ${backstage__backend__container__image}
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 15
          resources:
            requests:
              cpu: "128m"
              memory: "256Mi"
            limits:
              cpu: "192m"
              memory: "256Mi"
          ports:
            -  containerPort: ${backstage__backend__container__port}
          volumeMounts:
            - name: secrets
              mountPath: /etc/backstage/secrets
              readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: ${backstage__secret__application_credentials}
            items:
            - key: service_account_json
              path: service_account.json
