infra/terraform/templates/k8s/backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${metadata_name}
  namespace: ${metadata_namespace}
  labels:
%{ for key, value in resource_labels ~}
    ${key}: ${value}
%{ endfor ~}
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
%{ for key, value in resource_labels ~}
    ${key}: ${value}
%{ endfor ~}
  ports:
    - protocol: TCP
      port: 7007
      targetPort: 7007
