infra/terraform/templates/k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${backstage__backend__ingress__name}
  namespace: ${backstage__namespace__name}
  labels:
%{ for key, value in backstage__backend__labels ~}
    ${key}: ${value}
%{ endfor ~}
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: ${backstage__backend__ingress__address}
    networking.gke.io/managed-certificates: ${backstage__backend__certificate__name}
    networking.gke.io/v1beta1.FrontendConfig: ${backstage__backend__frontend_config__name}
spec:
  defaultBackend:
    service:
      name: ${backstage__backend__service__name}
      port:
        number: ${backstage__backend__service__port}
